Package: aroma.tcga
===================

Version: 0.1.8 [2009-10-30]
o Now makeFullNamesTranslator() of SdrfFile|Set adds a "failTag" 
  to the fullname of those fullnames that was not translated.


Version: 0.1.7 [2009-10-29]
o Added default argument 'ignore.case=TRUE' to listFiles(...)
  of TcgaDccDownloader.
o Added exportGenotypeCallsAndConfidenceScores() to
  BroadBirdseedGenotypeTcgaDataFile.


Version: 0.1.6 [2009-10-25]
o Added BroadBirdseedGenotypeTcgaData(File|FileSet).
o Added *FileSet classes for all *File classes.


Version: 0.1.5 [2009-10-23]
o OPTIMIZATION: Now makeFullNamesTranslator() of SdrfFileSet caches the
  result in the memory so it does not have to reread the files each times.
o Added appendFullNameTranslatorBySdrfFile{Set}() for FullNameInterface.
  Dropped ditto for GenericDataFileSet.


Version: 0.1.4 [2009-10-22]
o Added TcgaFullNameTranslators.
o Added argument 'onError' to downloadFile().
o Added argument 'order' to downloadFilesByPattern().
o Renamed downloadFiles() to downloadFilesByPattern().
o Now downloadFile() only download files available in the MANIFEST file.
o Added hasFiles() and hasFile() to TcgaDccDownloader. 
o Added getKnownFilePatterns() to TcgaDccDownloader.  The information
  is currently hardwired in the source code but should be handled by
  customable data files.


Version: 0.1.3 [2009-10-20]
o Added static findDataSets() to TcgaDccData.


Version: 0.1.2 [2009-10-16]
o Stricter dependencies.


Version: 0.1.1 [2009-10-02]
o Added makeFullNamesTranslator() to SdrfFile and SdrfFileSet.
o Added setFullNamesTranslatorBySdrfFile() to GenericDataFileSet.
o Added the SdrfFileSet class.


Version: 0.1.0 [2009-09-25]
o Added testScripts/.


Version: 0.0.9 [2009-09-24]
p Added BroadTotalCopyNumberTcgaDataFile.
o Added argument 'strict=FALSE' to getHeader() of MageTabDataMatrixFile.
  If FALSE, empty "Hybridization REF" fields are removed.  This is
  a workaround in order to read *.after_5NN.copynumber.data data files