@@ -9,7 +9,9 @@ setMethodS3("getBarcodeIdTranslators", "TcgaFullNameTranslators", function(stati
   # TCGA-16-0849-01A-01D-0384-01 => TCGA-16-0849,01A,01D-0384-01
   pattern <- BiospecimenCoreResource$getBarcodePattern("aliqoutBarcode");
   fnt <- function(names, ...) {
-    names <- strapply(names, pattern=pattern, FUN=function(...) {
+    # Workaround: strapply() drops elements not matching the pattern
+    idxs <- grep(pattern, names);
+    names[idxs] <- strapply(names[idxs], pattern=pattern, FUN=function(...) {
       x <- list(...);
       sprintf("%s,%s,%s-%s", x[2], x[6], x[9], x[12]);
     });
@@ -33,6 +35,9 @@ setMethodS3("getBarcodeIdTranslator", "TcgaFullNameTranslators", function(static
 
 ############################################################################
 # HISTORY:
+# 2009-10-30
+# o BUG FIX: getBarcodeIdTranslators() of TcgaFullNameTranslators would
+#   drop fullnames that did not match the pattern.
 # 2009-10-22
 # o Created.
 ############################################################################
