@@ -1,1 +1,1 @@
-############################################################################# TCGA DCC Structure############################################################################tcga4yeo/ tumor/  gbm/   cgcc/    broad.mit.edu/     genome_wide_snp_6/      snp/       broad.mit.edu_GBM.Genome_Wide_SNP_6.1.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.2.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.3.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.4.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.5.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.6.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.7.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.8.7.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.10.7.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.16.7.0/     hudsonalpha.org/     humanhap550/      snp/       hudsonalpha.org_GBM.HumanHap550.2.3.0/       hudsonalpha.org_GBM.HumanHap550.3.4.0/       hudsonalpha.org_GBM.HumanHap550.4.3.0/       hudsonalpha.org_GBM.HumanHap550.5.1.0/       hudsonalpha.org_GBM.HumanHap550.6.2.0/       hudsonalpha.org_GBM.HumanHap550.7.1.0/       hudsonalpha.org_GBM.HumanHap550.8.1.0/       hudsonalpha.org_GBM.HumanHap550.9.0.0/anonymous/ tumor/  gbm/   cgcc/    hms.harvard.edu/     hg-cgh-244a/      cna/       hms.harvard.edu_GBM.HG-CGH-244A.1.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.2.4.0/       hms.harvard.edu_GBM.HG-CGH-244A.3.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.4.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.5.0.0/       hms.harvard.edu_GBM.HG-CGH-244A.6.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.7.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.8.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.9.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.10.2.0/       hms.harvard.edu_GBM.HG-CGH-244A.11.0.0/     hg-cgh-415k_g4124a/      cna/       hms.harvard.edu_GBM.HG-CGH-415K_G4124A.1.1.0/       hms.harvard.edu_GBM.HG-CGH-415K_G4124A.2.0.0/    mskcc.org/     hg-cgh-244a/      cna/       mskcc.org_GBM.HG-CGH-244A.1.4.0/       mskcc.org_GBM.HG-CGH-244A.2.3.0/       mskcc.org_GBM.HG-CGH-244A.3.3.0/       mskcc.org_GBM.HG-CGH-244A.4.1.0/       mskcc.org_GBM.HG-CGH-244A.5.2.0/       mskcc.org_GBM.HG-CGH-244A.6.1.0/       mskcc.org_GBM.HG-CGH-244A.7.1.0/       mskcc.org_GBM.HG-CGH-244A.8.1.0/       mskcc.org_GBM.HG-CGH-244A.10.1.0/       mskcc.org_GBM.HG-CGH-244A.16.1.0/       mskcc.org_GBM.HG-CGH-244A.20.1.0/############################################################################# HISTORY:# 2009-10-22# o Updated anonymous/ and tcga4yeo/.# 2009-10-15# o Created.############################################################################
+############################################################################# TCGA DCC Structure############################################################################tcga4yeo/ tumor/  gbm/   cgcc/    broad.mit.edu/     genome_wide_snp_6/      snp/       broad.mit.edu_GBM.Genome_Wide_SNP_6.1.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.2.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.3.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.4.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.5.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.6.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.7.5.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.8.7.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.10.7.0/       broad.mit.edu_GBM.Genome_Wide_SNP_6.16.7.0/     hudsonalpha.org/     humanhap550/      snp/       hudsonalpha.org_GBM.HumanHap550.2.3.0/       hudsonalpha.org_GBM.HumanHap550.3.4.0/       hudsonalpha.org_GBM.HumanHap550.4.3.0/       hudsonalpha.org_GBM.HumanHap550.5.1.0/       hudsonalpha.org_GBM.HumanHap550.6.2.0/       hudsonalpha.org_GBM.HumanHap550.7.1.0/       hudsonalpha.org_GBM.HumanHap550.8.1.0/       hudsonalpha.org_GBM.HumanHap550.9.0.0/anonymous/ tumor/  gbm/   cgcc/    hms.harvard.edu/     hg-cgh-244a/      cna/       hms.harvard.edu_GBM.HG-CGH-244A.1.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.2.4.0/       hms.harvard.edu_GBM.HG-CGH-244A.3.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.4.5.0/       hms.harvard.edu_GBM.HG-CGH-244A.5.0.0/       hms.harvard.edu_GBM.HG-CGH-244A.6.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.7.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.8.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.9.3.0/       hms.harvard.edu_GBM.HG-CGH-244A.10.2.0/       hms.harvard.edu_GBM.HG-CGH-244A.11.0.0/     hg-cgh-415k_g4124a/      cna/       hms.harvard.edu_GBM.HG-CGH-415K_G4124A.1.1.0/       hms.harvard.edu_GBM.HG-CGH-415K_G4124A.2.0.0/    mskcc.org/     hg-cgh-244a/      cna/       mskcc.org_GBM.HG-CGH-244A.1.4.0/       mskcc.org_GBM.HG-CGH-244A.2.3.0/       mskcc.org_GBM.HG-CGH-244A.3.3.0/       mskcc.org_GBM.HG-CGH-244A.4.1.0/       mskcc.org_GBM.HG-CGH-244A.5.2.0/       mskcc.org_GBM.HG-CGH-244A.6.1.0/       mskcc.org_GBM.HG-CGH-244A.7.1.0/       mskcc.org_GBM.HG-CGH-244A.8.1.0/       mskcc.org_GBM.HG-CGH-244A.10.1.0/       mskcc.org_GBM.HG-CGH-244A.16.1.0/       mskcc.org_GBM.HG-CGH-244A.20.1.0/############################################################################# HISTORY:# 2009-10-30# o Still up to date.# 2009-10-22# o Updated anonymous/ and tcga4yeo/.# 2009-10-15# o Created.############################################################################
