@@ -1,1 +1,1 @@
-############################################################################# TCGA DCC Structure############################################################################tcga4yeo/ tumor/  ov/   cgcc/    broad.mit.edu/     genome_wide_snp_6/      snp/       broad.mit.edu_OV.Genome_Wide_SNP_6.9.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.11.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.12.6.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.13.6.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.14.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.15.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.17.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.18.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.19.7.0/     hudsonalpha.org/     human1mduo/      snp/       hudsonalpha.org_OV.Human1MDuo.1.1.0/       hudsonalpha.org_OV.Human1MDuo.2.1.0/       hudsonalpha.org_OV.Human1MDuo.3.0.0/       hudsonalpha.org_OV.Human1MDuo.4.0.0/       hudsonalpha.org_OV.Human1MDuo.5.0.0/       hudsonalpha.org_OV.Human1MDuo.6.0.0/       hudsonalpha.org_OV.Human1MDuo.7.0.0/anonymous/ tumor/  ov/   cgcc/    hms.harvard.edu/     hg-cgh-244a/      cna/       hms.harvard.edu_OV.HG-CGH-244A.1.0.0/       hms.harvard.edu_OV.HG-CGH-244A.2.2.0/       hms.harvard.edu_OV.HG-CGH-244A.3.0.0/       hms.harvard.edu_OV.HG-CGH-244A.4.2.0/       hms.harvard.edu_OV.HG-CGH-244A.5.2.0/       hms.harvard.edu_OV.HG-CGH-244A.6.0.0/     hg-cgh-415k_g4124a/      cna/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.1.3.0/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.2.1.0/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.3.0.0/    mskcc.org/     hg-cgh-244a/      cna/       mskcc.org_OV.HG-CGH-244A.9.3.0/     cgh-1x1m_g4447a/      cna/       mskcc.org_OV.CGH-1x1M_G4447A.9.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.11.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.12.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.13.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.14.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.15.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.17.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.18.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.19.1.0/############################################################################# HISTORY:# 2009-10-22# o Updated anonymous/ and tcga4yeo/.# 2009-08-13# o Updated with the latest available TCGA archives.# 2009-06-01# o Created from tcgaDownload.Rex.############################################################################
+############################################################################# TCGA DCC Structure############################################################################tcga4yeo/ tumor/  ov/   cgcc/    broad.mit.edu/     genome_wide_snp_6/      snp/       broad.mit.edu_OV.Genome_Wide_SNP_6.9.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.11.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.12.6.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.13.6.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.14.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.15.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.17.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.18.7.0/       broad.mit.edu_OV.Genome_Wide_SNP_6.19.7.0/     hudsonalpha.org/     human1mduo/      snp/       hudsonalpha.org_OV.Human1MDuo.1.1.0/       hudsonalpha.org_OV.Human1MDuo.2.1.0/       hudsonalpha.org_OV.Human1MDuo.3.0.0/       hudsonalpha.org_OV.Human1MDuo.4.0.0/       hudsonalpha.org_OV.Human1MDuo.5.0.0/       hudsonalpha.org_OV.Human1MDuo.6.0.0/       hudsonalpha.org_OV.Human1MDuo.7.0.0/anonymous/ tumor/  ov/   cgcc/    hms.harvard.edu/     hg-cgh-244a/      cna/       hms.harvard.edu_OV.HG-CGH-244A.1.0.0/       hms.harvard.edu_OV.HG-CGH-244A.2.2.0/       hms.harvard.edu_OV.HG-CGH-244A.3.0.0/       hms.harvard.edu_OV.HG-CGH-244A.4.2.0/       hms.harvard.edu_OV.HG-CGH-244A.5.2.0/       hms.harvard.edu_OV.HG-CGH-244A.6.0.0/     hg-cgh-415k_g4124a/      cna/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.1.3.0/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.2.1.0/       hms.harvard.edu_OV.HG-CGH-415K_G4124A.3.0.0/    mskcc.org/     hg-cgh-244a/      cna/       mskcc.org_OV.HG-CGH-244A.9.3.0/     cgh-1x1m_g4447a/      cna/       mskcc.org_OV.CGH-1x1M_G4447A.9.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.11.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.12.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.13.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.14.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.15.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.17.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.18.1.0/       mskcc.org_OV.CGH-1x1M_G4447A.19.1.0/############################################################################# HISTORY:# 2009-10-30# o Still up to date.# 2009-10-22# o Updated anonymous/ and tcga4yeo/.# 2009-08-13# o Updated with the latest available TCGA archives.# 2009-06-01# o Created from tcgaDownload.Rex.############################################################################
